clean refactor the whole project